# paboulink-rtl

./: .gitignore  AGENTS.md  README.md  main.py  ofdm.py  pyproject.toml
docs/: ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  fft_streaming_design.md  fft_streaming_wrapper.md  minn_design.md  minn_detector_architecture.md  minn_detector_design.md  minn_implementation_plan.md  sync_design.md  verilog_guide.md
reference_code/minn/: minn.py  minn_detector.c  minn_detector.h
rtl/: complex_conjugate.sv  dual_clock_fifo.v  dual_clock_ram.v  fft_streaming_wrapper.v  minn_antenna_datapath.sv  minn_antenna_path.sv  minn_delay_line.sv  minn_frame_detector.sv  minn_gate_peak_fsm.sv  minn_output_buffer.sv  minn_preamble_detector.sv  minn_running_sum.sv  nco_cfo_compensator.sv  ofdm_frame_synchronizer.sv  ofdm_frontend_top.sv  spiral-dft1761917805.v  spiral_dft.v  spiral_dft_it_2048_16bit_scaled.v  spiral_dft_it_2048_unscaled.v  spiral_dft_iterative_2048pt.v  spiral_fft_it_2048_16b_scaled_bitrev.sv
tests/: minn_preamble.py  ofdm_utils.py  test_complex_conjugate.py  test_fft_streaming_wrapper.py  test_minn_detector.py  test_minn_preamble_detector.py  test_nco_cfo.py  test_ofdm_frame_synchronizer.py  test_ofdm_frontend_top.py  test_spiral_dft.py
tests/utils/: ofdm.py  plotting.py
